--- a/main.css
+++ b/main.css
@@ -1,30 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&display=swap');
-
 body {
-	font-family: 'Raleway', sans-serif;
+	font-family: Arial, sans-serif;
+	background-color: #ebdcbb;
+	color: #646464;
+	position: relative;
 }
 
 .container {
 	max-width: 400px;
+	box-sizing: border-box;
 	margin: 0 auto;
 	padding: 20px;
 	border: 1px solid #ccc;
 	border-radius: 5px;
+	background-color: #f5f5f5;
+	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+	position: absolute;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, 50%);
 }
 
 h1 {
 	text-align: center;
+	color: #6699cc;
 }
 
 select {
+	box-sizing: border-box;
 	width: 100%;
 	margin-bottom: 20px;
+	padding: 10px;
+	font-size: 16px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	background-color: #e0e9f0;
+	color: #646464;
+}
+
+select:focus {
+	border: 2px solid #6699cc;
+	outline: none;
 }
 
 .currencyInfo {
 	border: 1px solid #ccc;
 	padding: 10px;
 	border-radius: 5px;
+	background-color: #f0f8ff;
 }
 
 .currencyInfo p {
